<resources>
    <string name="app_name">My Application</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="email_adress">Email Adress</string>
    <string name="full_name">Full Name</string>
    <string name="welcome">Welcome !</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_password">Create Password</string>
    <string name="password">Password</string>
    <string name="hello_login_here">Hello! Login here</string>
    <string name="enter_password">enter password</string>
    <string name="register">register</string>
    <string name="l">l</string>
    <string name="already_registered_login_here">already registered ? login here</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="add_properties">Add Properties</string>
</resources>